--- a/MVP1/my_app/pubspec.yaml
+++ b/MVP1/my_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^5.0.0
   shared_preferences: ^2.0.8
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
 
 
 
