--- a/MVP1/my_app/pubspec.yaml
+++ b/MVP1/my_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  alarm: ^3.1.4
+  permission_handler: ^8.1.6
 
 
 
