--- a/MVP1/my_app/android/app/build.gradle
+++ b/MVP1/my_app/android/app/build.gradle
@@ -42,6 +42,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        minSdkVersion 26
     }
 
     buildTypes {
@@ -51,6 +52,10 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    implementation 'org.tensorflow:tensorflow-lite:1.1.2' // reemplaza 0.0.0 con la versión correcta
 }
 
 flutter {
