--- a/MVP1/my_app/pubspec.yaml
+++ b/MVP1/my_app/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  provider: ^5.0.0
+  provider: ^6.1.2
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   alarm: ^3.1.4
-  permission_handler: ^8.1.6
+  permission_handler: ^11.3.1
+  flutter_map: ^7.0.0
+  latlong2: ^0.9.1
+  tflite_flutter: ^0.10.1
 
 
 
@@ -53,8 +56,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
-  flutter_local_notifications: ^12.0.0
+  flutter_lints: ^4.0.0
+  flutter_local_notifications: ^17.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +69,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/model_pdai.tflite
 
   # To add assets to your application, add an assets section, like this:
   # assets:
